force-app/main/default/objects/Operating_Company__c/Operating_Company__c.object-meta.xml
<CustomObject>
    <label>Operating Company</label>
    <nameField>
        <displayFormat>OpCo - {00000}</displayFormat>
        <label>OperatingCompany Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operating Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>