force-app/main/default/objects/Operating_Company__c/fields/Default_TFN__c.field-meta.xml
<CustomField>
    <fullName>Default_TFN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default TFN</label>
    <referenceTo>TFN__c</referenceTo>
    <relationshipLabel>Operating Companies</relationshipLabel>
    <relationshipName>Operating_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>