force-app/main/default/objects/Operating_Company__c/fields/OpCo_Description__c.field-meta.xml
<CustomField>
    <fullName>OpCo_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OpCo Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>