force-app/main/default/objects/Operating_Company__c/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <label>Operating Company</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRC Direct</fullName>
            </value>
            <value>
                <fullName>JMC</fullName>
            </value>
            <value>
                <fullName>NAT_SHERMAN</fullName>
            </value>
            <value>
                <fullName>NUMARK</fullName>
            </value>
            <value>
                <fullName>PM Corporate</fullName>
            </value>
            <value>
                <fullName>PMIP</fullName>
            </value>
            <value>
                <fullName>PMUSA</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>USST</fullName>
            </value>
            <value>
                <fullName>USSTC</fullName>
            </value>
            <value>
                <fullName>HELIX</fullName>
            </value>
            <value>
                <fullName>NJOY</fullName>
            </value>
            <value>
                <fullName>6601 Ventures</fullName>
            </value>
            <value>
                <fullName>USSTN</fullName>
            </value>
            <value>
                <fullName>HORIZON</fullName>
            </value>
            <value>
                <fullName>NUMRK</fullName>
                <isActive>false</isActive>
                <label>NUMRK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>