force-app/main/default/objects/Operating_Company__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <formula>ISPICKVAL(OperatingCompany__c, &apos;Trade&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade</label>
    <type>Checkbox</type>
</CustomField>